plugins {
    id 'java'
    id 'checkstyle'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

def queryDslVersion = "6.11"
apply from: 'setting/querydsl.gradle'

group = 'com.wholeseeds'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

checkstyle {
    maxWarnings = 0
    configFile = file("${rootDir}/config/naver-checkstyle-rules.xml")
    configProperties = ["suppressionFile": "${rootDir}/config/naver-checkstyle-suppressions.xml"]
    toolVersion = "8.42"
    ignoreFailures = true // warning 만 띄우고 build 되도록
}

tasks.withType(Checkstyle).configureEach {
    exclude { fileTreeElement ->
        fileTreeElement.file.path.contains("/build/generated/")
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'org.postgresql:postgresql' // postgresql
    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.0' // SQL 이쁘게 포멧팅 라이브러리
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0' // swagger-ui
    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'com.google.firebase:firebase-admin:9.2.0'

    // OpenFeign QueryDSL
    implementation("io.github.openfeign.querydsl:querydsl-core:${queryDslVersion}")
    implementation("io.github.openfeign.querydsl:querydsl-jpa:$queryDslVersion")
    annotationProcessor("io.github.openfeign.querydsl:querydsl-apt:$queryDslVersion:jpa")

    // MapStruct
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // ncp object storage
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.563'

    // OpenCSV
    implementation 'com.opencsv:opencsv:5.11'

    // Aho-Corasick
    implementation 'org.ahocorasick:ahocorasick:0.6.3'
}

//tasks.named('test') {
//    useJUnitPlatform()
//}

tasks.named('checkstyleMain') {
    dependsOn 'compileTestJava'
    // Skip generated QueryDSL classes
    exclude "**/build/generated/querydsl/**/*.java"
}
